tf/prebuilt/scale-to-zero-loop/manifests/checkout-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: checkout-gateway
  labels:
    app.kubernetes.io/managed-by: spike-substrate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-gateway-client
  namespace: checkout-gateway
  labels:
    app.kubernetes.io/managed-by: spike-substrate
    app: checkout-gateway-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout-gateway-client
  template:
    metadata:
      labels:
        app: checkout-gateway-client
    spec:
      containers:
      - name: checkout-gateway-client
        image: "busybox:1.36"
        command:
        - sh
        - "-c"
        - "while true; do wget -q -O /dev/null -S http://notifications-sync-web.notifications-sync.svc.cluster.local/ 2>&1 | grep HTTP; sleep 4; done"
        resources:
          requests:
            cpu: "46m"
            memory: "38Mi"
          limits:
            cpu: "92m"
            memory: "76Mi"
